Making the first requests in auth/register

--- a/frontend/registration.html
+++ b/frontend/registration.html
@@ -14,7 +14,9 @@
         Name: <input type="text" id="register-name" />
         <br />
         Password: <input type="password" id="register-password" />
+        <br />
         Confirm Password: <input type="password" id="register-password-confirm" />
         <button id="register-submit">Submit</button>
+        <script type="module" src="src/registration.js"></script>
     </body>
 </html>
