--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,5 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Slackr</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles/loginstyle.css">
     </head>
+    <body>
+        
+    </body>
 </html>
