Pretty much done with the basic structure of login

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,4 +6,11 @@
         <title>Slackr</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
+    <body>
+        <h2>Login</h2>
+        Email: <input type="text" id="login-user" />
+        Password: <input type="password" id="login-password" />
+        <button id="login-button">Login</button>
+        <script type="module" src="src/login.js"></script>
+    </body>
 </html>
